# DirtyRack

./: .gitignore  Cargo.toml  DirtyRack.clap  README.md  check_output.txt  check_output_final.txt  check_output_final_2.txt  full_error.txt  full_error_cli.txt  run.bat  run.sh  test_patch.json
DirtyRack.app/Contents/: Info.plist
DirtyRack.app/Contents/Resources/docs/: cli_reference.md  design_philosophy.md
crates/dirtydata-cli/: Cargo.toml
crates/dirtydata-cli/src/: main.rs
crates/dirtydata-cli_legacy/: Cargo.toml
crates/dirtydata-cli_legacy/src/: exporter.rs  main.rs
crates/dirtydata-core/: Cargo.toml
crates/dirtydata-core/src/: actions.rs  constitution.rs  dsl.rs  graph_utils.rs  hash.rs  ir.rs  lib.rs  merge.rs  patch.rs  storage.rs  types.rs  validate.rs
crates/dirtydata-gui/: Cargo.toml
crates/dirtydata-gui/src/: app.rs  editor.rs  lib.rs  main.rs
crates/dirtydata-host/: Cargo.toml
crates/dirtydata-host/src/: lib.rs
crates/dirtydata-intent/: Cargo.toml
crates/dirtydata-intent/src/: attribution.rs  lib.rs
crates/dirtydata-observer/: Cargo.toml
crates/dirtydata-observer/src/: divergence.rs  lib.rs
crates/dirtydata-runtime/: Cargo.toml
crates/dirtydata-runtime/src/: lib.rs  nodes.rs  offline.rs
crates/dirtyrack-cli/: Cargo.toml
crates/dirtyrack-cli/src/: main.rs
crates/dirtyrack-gui/: Cargo.toml
crates/dirtyrack-gui/src/: browser.rs  cable.rs  engine.rs  exporter.rs  faceplate.rs  lib.rs  main.rs  rack.rs  visual_data.rs
crates/dirtyrack-gui/src/shaders/: mri.wgsl
crates/dirtyrack-modules/: Cargo.toml
crates/dirtyrack-modules/src/: attenuverter.rs  bernoulli.rs  biquad.rs  chaos.rs  clock.rs  clock_tree.rs  compressor.rs  delay.rs  drift.rs  drift_engine.rs  envelope.rs  input.rs  lfo.rs  lib.rs  logic.rs  mackeyglass.rs  macro_ctrl.rs  midi.rs  mixer.rs  mod_matrix.rs  noise.rs  output.rs  parallel_runner.rs  quantizer.rs  recorder.rs  registry.rs  renderer.rs  reverb.rs  runner.rs  saturation.rs  scope.rs  sequencer.rs  sh.rs  signal.rs  switch.rs  vca.rs  vcf.rs  vco.rs  wavefolder.rs  wdf.rs  (+3 more)
crates/dirtyrack-modules/tests/: determinism_test.rs  polyphony_test.rs
crates/dirtyrack-plugin/: Cargo.toml
crates/dirtyrack-plugin/src/: lib.rs
crates/dirtyrack-sdk/: Cargo.toml
crates/dirtyrack-sdk/src/: lib.rs
crates/example-thirdparty-module/: Cargo.toml
crates/example-thirdparty-module/src/: lib.rs
crates/example-wasm-dsp/: Cargo.toml  build_wasm.sh
crates/example-wasm-dsp/src/: lib.rs
docs/: README_JP.md  SDK_Documentation.md  Tutorial_Creating_Modules.md  architecture.md  cli_reference.md  design_philosophy.md
examples/: add_eq.json  add_plugin.json  add_source_file.json  basic_chain.json
scripts/: bundle_mac.sh
