[workspace]
members = [
    "crates/dirtydata-core",
    "crates/dirtydata-runtime",
    "crates/dirtydata-observer",
    "crates/dirtydata-host",
    "crates/dirtydata-intent",
    "crates/dirtyrack-modules",
    "crates/dirtyrack-gui",
    "crates/dirtyrack-sdk",
    "crates/example-thirdparty-module",
    "crates/dirtyrack-cli",
    "crates/dirtyrack-plugin",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT"

[workspace.dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
ulid = { version = "1", features = ["serde"] }
blake3 = "1"
thiserror = "2"
