[package]
name = "dirtydata-cli"
description = "CLI Driver — the first thing humans touch"
version.workspace = true
edition.workspace = true

[dependencies]
dirtydata-core = { path = "../dirtydata-core" }
dirtydata-observer = { path = "../dirtydata-observer" }
dirtydata-intent = { path = "../dirtydata-intent" }
clap = { version = "4", features = ["derive"] }
colored = "3"
serde_json = { workspace = true }
notify = "6.1.1"
dirtydata-runtime = { path = "../dirtydata-runtime" }
dirtydata-gui = { path = "../dirtydata-gui" }
