[package]
name = "dirtydata-gui"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
dirtydata-core = { path = "../dirtydata-core" }
egui = "0.29"
eframe = { version = "0.29", default-features = false, features = ["wgpu", "glow"] }
serde = { workspace = true }
serde_json = { workspace = true }
arc-swap = "1.6.0"
notify = "6.1.1"
crossbeam-channel = "0.5"
crossbeam-queue = "0.3"
dirtydata-runtime = { path = "../dirtydata-runtime" }
log = "0.4"
