[package]
name = "dirtydata-runtime"
description = "Execution Scheduler / Domain Isolation — stub"
version.workspace = true
edition.workspace = true

[dependencies]
dirtydata-core = { path = "../dirtydata-core" }
cpal = "0.15.2"
arc-swap = "1.6.0"
dirtydata-host = { path = "../dirtydata-host" }
rand = "0.10.1"
rand_pcg = "0.10.2"
hound = "3.5.1"
crossbeam-channel = "0.5.15"
crossbeam-queue = "0.3.12"
dashmap = "5.5.3"
midir = "0.11.0"
serde_json.workspace = true
rustfft = "6.4.1"
num-complex = "0.4.6"
wasmtime = "44.0.0"
rosc = "0.11.4"
anyhow = "1.0.102"
blake3 = "1"
