[package]
name = "dirtyrack-cli"
version = "0.1.0"
edition = "2021"

[dependencies]
dirtyrack-sdk = { path = "../dirtyrack-sdk" }
dirtyrack-modules = { path = "../dirtyrack-modules" }
dirtyrack-gui = { path = "../dirtyrack-gui" }
clap = { version = "4", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
hound = "3.5"
blake3 = "1.5"
chrono = "0.4"
colored = "2.1"
anyhow = "1.0"
