[package]
name = "dirtyrack-gui"
description = "Eurorack rack GUI — module faceplate rendering, cable physics"
version.workspace = true
edition.workspace = true

[[bin]]
name = "dirtyrack"
path = "src/main.rs"

[dependencies]
dirtyrack-modules = { path = "../dirtyrack-modules" }
dirtydata-core = { path = "../dirtydata-core" }
egui = "0.29"
eframe = { version = "0.29", default-features = false, features = ["wgpu", "glow"] }
serde = { workspace = true }
serde_json = { workspace = true }
cpal = "0.15.2"
crossbeam-channel = "0.5"
crossbeam-queue = "0.3"
arc-swap = "1.7"
egui_plot = "0.29"
dirtyrack-sdk = { path = "../dirtyrack-sdk" }
triple_buffer = "9.0"
rand = "0.8"
