[package]
name = "dirtyrack-plugin"
version.workspace = true
edition.workspace = true

[lib]
crate-type = ["cdylib", "lib"]

[dependencies]
nih_plug = { git = "https://github.com/robbert-vdh/nih-plug.git", features = ["assert_process_allocs"] }
nih_plug_egui = { git = "https://github.com/robbert-vdh/nih-plug.git" }
dirtyrack-modules = { path = "../dirtyrack-modules" }
dirtyrack-gui = { path = "../dirtyrack-gui" }
serde = { workspace = true }
serde_json = { workspace = true }
egui = "0.27"
